# ChangeLog for dev-python/bpython
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/bpython/ChangeLog,v 1.31 2012/01/28 15:27:30 phajdan.jr Exp $

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> bpython-0.10.1.ebuild:
  x86 stable wrt bug #400325

  27 Jan 2012; Agostino Sarubbo <ago@gentoo.org> bpython-0.10.1.ebuild:
  Stable for amd64, wrt bug #400325

  23 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  bpython-0.9.7.1.ebuild, bpython-0.10.1.ebuild:
  Use correct slot of pygobject.

*bpython-0.10.1 (09 Aug 2011)

  09 Aug 2011; Andrey Grozin <grozin@gentoo.org> -bpython-0.10.ebuild,
  +bpython-0.10.1.ebuild:
  Version bump to fix bug #376615

*bpython-0.10 (26 Jul 2011)

  26 Jul 2011; Andrey Grozin <grozin@gentoo.org> +bpython-0.10.ebuild:
  Version bump

  21 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  bpython-0.9.7.1.ebuild:
  Require Python >=2.5 (bug #338260).

  20 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -bpython-0.9.6.2.ebuild:
  Delete.

  20 Sep 2010; Markos Chandras <hwoarang@gentoo.org> bpython-0.9.7.1.ebuild:
  Stable on amd64 wrt bug #337149

  15 Sep 2010; Christian Faulhammer <fauli@gentoo.org>
  bpython-0.9.7.1.ebuild:
  stable x86, bug 337149

*bpython-0.9.7.1 (04 Aug 2010)

  04 Aug 2010; Andrey Grozin <grozin@gentoo.org> -bpython-0.9.7.ebuild,
  +bpython-0.9.7.1.ebuild, metadata.xml:
  Version bump

*bpython-0.9.7 (20 Jul 2010)

  20 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -bpython-0.9.5.2-r1.ebuild, -files/bpython-0.9.5.2-python-3.patch,
  +bpython-0.9.7.ebuild:
  Version bump.

  23 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  bpython-0.9.6.2.ebuild:
  stable x86, bug 302896

  03 Feb 2010; Markos Chandras <hwoarang@gentoo.org> bpython-0.9.6.2.ebuild:
  Stable on amd64 wrt bug #302896

*bpython-0.9.6.2 (31 Dec 2009)
