@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/bpython
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bpython/ChangeLog,v 1.31 2012/01/28 15:27:30 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bpython/ChangeLog,v 1.32 2012/04/05 12:38:44 grozin Exp $
+
+*bpython-0.11 (05 Apr 2012)
+
+  05 Apr 2012; Andrey Grozin <grozin@gentoo.org> -bpython-0.9.7.1.ebuild,
+  +bpython-0.11.ebuild:
+  Version bump
 
   28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> bpython-0.10.1.ebuild:
   x86 stable wrt bug #400325
